force-app/main/default/objects/SBQQ__Subscription__c/fields/AVA_SFCPQ__SalesTaxDetails__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__SalesTaxDetails__c</fullName>
    <label>Sales Tax Details(Deprecated)</label>
    <type>TextArea</type>
</CustomField>