force-app/main/default/objects/SBQQ__Subscription__c/fields/AVA_SFCPQ__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__TaxAmount__c</fullName>
    <description>Displays the tax amount returned by AvaTax.</description>
    <inlineHelpText>Displays the tax amount returned by AvaTax.</inlineHelpText>
    <label>Sales Tax Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>