force-app/main/default/objects/SBQQ__Subscription__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not in Sync</fullName>
                <default>true</default>
                <label>Not in Sync</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>In Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>