force-app/main/default/objects/SBQQ__Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
	((TODAY()&gt;=SBQQ__StartDate__c) &amp;&amp; (TODAY() &lt;= SBQQ__EndDate__c)) &amp;&amp; ISPICKVAL(Integration_Status__c,&#39;Submitted&#39;),
	IMAGE(&quot;/resource/activeIcons/03_ActiveContact.png&quot;, &quot;03 - Active Contact&quot;,20,20),
	IF(
		ISPICKVAL(Integration_Status__c,&#39;Pending&#39;),
		&#39;Pending Integration&#39;,
		IF(
			ISPICKVAL(Integration_Status__c,&#39;In Error&#39;),
			&#39;Integration Error&#39;,
			IF(
				(TODAY()&lt;=SBQQ__StartDate__c) &amp;&amp; ISPICKVAL(Integration_Status__c,&#39;Submitted&#39;),
				&#39;Pending&#39;,
				IF(
					(TODAY()&gt;=SBQQ__EndDate__c) &amp;&amp; ISPICKVAL(Integration_Status__c,&#39;Submitted&#39;),
					&#39;Expired&#39;,
					&#39;Not Submitted&#39;
				)
			)
		)
	)   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>