force-app/main/default/objects/SBQQ__Subscription__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>SBQQ__Account__c</columns>
    <columns>SBQQ__EndDate__c</columns>
    <columns>SBQQ__StartDate__c</columns>
    <columns>Status__c</columns>
    <columns>SBQQ__NetPrice__c</columns>
    <columns>Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Status__c</field>
        <operation>notEqual</operation>
        <value>Submitted</value>
    </filters>
    <label>Not Submitted</label>
</ListView>